
2.13 UNREL
        - several various POD corrections/updates
        - fix issue where info_cache() wasn't being updated after instance
          removal (fixes #167)
        - fix bug in BCMD::using() in the Windows regex check. Was missing a \s+
        - fix issue in BCMD::info_cache(). A regex was incorrect. It worked on
          Unix just due to sheer luck

2.12    2017-03-27
        - extended default install timeout to 600 seconds
        - fix erroneous uninitialized warning in Dispatch if a repo isn't sent
          in, and one isn't found with Git in the cwd. (fixes #165)
        - clarify what course of action to take if no testers can be found
          when bbdispatch is run (fixes #164)
        - added proper links to berrybrew and perlbrew in pod description
          (closes #145)
        - added LWP::Simple for #142 (check if clone URL exists)
        - added check in Git::clone() to ensure that the remote repo exists
          before we attempt a clone, and croak() if not (fixes #142)
        - added logging to all methods in Git, updated POD, and all locations
          that initiate a new Git object send in their own debug level 
          (closes #166)
        - we now cache the results of the '*brew available' calls. Perlbrew
          fetches this info from the Internet (and berrybrew will soon too), so
          this feature will speed things up when multiple calls for info happen
          within a single test run. Can be disabled with the -X param to
          brewbuild (closes #163)
        - finalized Tester's ability to write logs to a file, and added POD
          (closes #149)

2.11    2017-03-26
        - we now filter out cperls until we can do further testing. This is
          handled in BCMD::available() with a `[^c]` entry in the regex when we
          pull out the perls listed in $info (fixes #162)
        - _validate_opts() now only compares against argument directives, not
          their values (fixes #161)