@@ -7,6 +7,8 @@ Revision history for Test-BrewBuild
         - fix bug in BCMD::using() in the Windows regex check. Was missing a \s+
         - fix issue in BCMD::info_cache(). A regex was incorrect. It worked on
           Unix just due to sheer luck
+        - added additional argument checking in the command string to Tester
+          (closes #144)
 
 2.12    2017-03-27
         - extended default install timeout to 600 seconds
